feat: watch binance

--- a/.env
+++ b/.env
@@ -1,9 +1,12 @@
+PORT=3000
+HOST=http://127.0.0.1
+
 # Database
-DATABASE_NAME=
-DATABASE_USER=
-DATABASE_PASSWORD=
-DATABASE_HOST=
-DATABASE_PORT=
+DATABASE_NAME=trivium
+DATABASE_USER=admin
+DATABASE_PASSWORD=12345
+DATABASE_HOST=127.0.0.1
+DATABASE_PORT=5432
 
 # Firebase
 FIREBASE_APP_NAME=
@@ -13,3 +16,9 @@ FRONTEND_URL=
 
 # Backend
 BACKEND_URL=
+
+
+# export
+INFLUXDB_TOKEN="J_TpfM3jA1O9nG84RfsjYmtg5YpLdxSjmPtEIjzsqDW2j_EkGAjy_ovIRNELzDD2QZEU4bJTiZD05EcLKBEujA=="
+INFLUXDB_URL="http://localhost:8086"
+INFLUXDB_BUCKET="trivium"
